improve files and interview rules